--- a/nessie_js/package.json
+++ b/nessie_js/package.json
@@ -10,13 +10,15 @@
     "mqtt": "^4.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "serve": "^12.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod": "yarn build && yarn serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
